k8s-manifests/02-database.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-internal-svc
spec:
  ports:
    - port: 3306
  selector:
    app: mysql
  clusterIP: None # Headless service for internal routing
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql-db
spec:
  selector:
    matchLabels:
      app: mysql
  serviceName: "mysql-internal-svc"
  replicas: 1
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:8.0
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "500m"
          ports:
            - containerPort: 3306
